--- a/app/src/main/res/layout/row_hubs_list.xml
+++ b/app/src/main/res/layout/row_hubs_list.xml
@@ -12,4 +12,24 @@
         android:text="Medium Text"
         android:textColor="@android:color/black"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+    <TextView
+        android:id="@+id/textViewHubDateRow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="Medium Text"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/message_text_color_recipient"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+    <TextView
+        android:id="@+id/textViewMessageRow"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/textViewHubNameRow"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:text="Medium Text"
+        android:textStyle="italic"
+        android:textColor="@color/message_text_color_recipient"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 </RelativeLayout>
